Wrap annotations pending an upstream fix

--- a/app/assets/stylesheets/m3.scss
+++ b/app/assets/stylesheets/m3.scss
@@ -22,3 +22,11 @@
   margin: 0 1px 3px 0;
   position: relative;
 }
+
+.#{$namespace}-container {
+  .mirador-window-sidebar-annotation-panel {
+    .MuiMenuItem-root {
+      white-space: normal;
+    }
+  }
+}
